--- a/src/components/BrandMessage/brand-message.scss
+++ b/src/components/BrandMessage/brand-message.scss
@@ -1,5 +1,6 @@
 .brand_message {
   display: flex;
+  margin-top: 40px;
   flex-direction: column;
   justify-content: space-between;
   h2.message_title {
@@ -10,14 +11,18 @@
     letter-spacing: 1.5px;
     font-weight: 400;
   }
+
   .message_list {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     margin: 70px 0;
+    gap: 30px;
 
     .message_item {
       min-height: 200px;
-      width: 310px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -41,6 +46,7 @@
       }
     }
   }
+
   .brand_video {
     width: 100%;
     height: 800px;
@@ -49,6 +55,36 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .brand_message {
+    .message_list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .brand_video {
+      height: 600px;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .brand_message {
+    .brand_video {
+      height: 500px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .brand_message {
+    .message_list {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .brand_video {
+      height: 400px;
     }
   }
 }
