--- a/src/components/FiverrPro/fiverr-pro.scss
+++ b/src/components/FiverrPro/fiverr-pro.scss
@@ -62,3 +62,28 @@
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .fiverrPro {
+    .fiverrPro_content {
+      display: block;
+      .fierrPro_content_image {
+        margin-top: 40px;
+      }
+    }
+  }
+}
+
+// @media (max-width: 900px) {
+//   .fiverrPro {
+//     .fiverrPro_content {
+//     }
+//   }
+// }
+
+// @media (max-width: 600px) {
+//   .fiverrPro {
+//     .fiverrPro_content {
+//     }
+//   }
+// }
