--- a/src/components/LogoMaker/logoMaker.scss
+++ b/src/components/LogoMaker/logoMaker.scss
@@ -3,6 +3,7 @@
   display: flex;
   background-color: #fef6f2;
   border-radius: 12px;
+  // flex-direction: column-reverse;
   .logoMaker_content {
     width: 50%;
     display: flex;
@@ -50,3 +51,34 @@
     }
   }
 }
+
+@media (max-width: 1050px) {
+  .logoMaker {
+    flex-direction: column-reverse;
+    .logoMaker_content {
+      width: 100%;
+    }
+    .logoMaker_image {
+      // width: 50%;
+      padding: 0;
+      margin: 0 auto;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+// @media (max-width: 900px) {
+//   .fiverrPro {
+//     .fiverrPro_content {
+//     }
+//   }
+// }
+
+// @media (max-width: 600px) {
+//   .fiverrPro {
+//     .fiverrPro_content {
+//     }
+//   }
+// }
