--- a/src/components/Testimonial/testimonial.scss
+++ b/src/components/Testimonial/testimonial.scss
@@ -1,9 +1,13 @@
 .testimonial {
-  height: 460px;
-  padding: 40px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
+  height: fit-content;
+  // height: 800px;
+  // padding: 40px 0;
+  // display: flex;
+  // flex-direction: column;
+
+  // gap: 40px;
+
+  margin: 40px 0;
   h2 {
     font-size: 48px;
     // letter-spacing: -1.44px;
@@ -11,6 +15,7 @@
     max-width: 720px;
     color: #404145;
     font-weight: 400;
+    margin-bottom: 20px;
   }
   .testimonial_list {
     .slick-arrow {
@@ -46,11 +51,13 @@
     }
     .testimonial_item {
       .testimonial_item_unit {
-        height: 290px;
+        // height: 290px;
+        height: fit-content;
         display: flex;
         gap: 40px;
         .testimonial_video {
           width: 40%;
+          height: 300px;
           iframe {
             border-radius: 4px;
             height: 100%;
@@ -89,6 +96,32 @@
               color: #003912;
               font-family: DomaineDisplay;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .testimonial {
+    height: 750px;
+    h2 {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+    .testimonial_list {
+      .testimonial_item {
+        .testimonial_item_unit {
+          display: block;
+          height: fit-content;
+          .testimonial_video {
+            width: 100%;
+            height: 400px;
+          }
+          .testimonial_content {
+            margin-top: 20px;
+            width: 100%;
           }
         }
       }
