--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -37,6 +37,38 @@
       p {
       }
     }
+    .login_form_input {
+      text-align: center;
+      input {
+        // cursor: pointer;
+        // display: flex;
+        padding: 10px 24px;
+        border-color: #e4e5e7;
+        color: #222325;
+        // justify-content: space-evenly;
+        margin: 12px 0;
+        width: 100%;
+        // align-items: center;
+        // background: #fff;
+        border: 1px solid #e4e5e7;
+        border-radius: 10px;
+      }
+    }
+    .login_button {
+      display: flex;
+      justify-content: center;
+      button {
+        padding: 10px 20px;
+        color: white;
+        font-weight: 600;
+        border-radius: 12px;
+        background-color: #903b4b;
+        margin: 10px 0;
+        &:hover {
+          opacity: 0.9;
+        }
+      }
+    }
     .login_google {
       cursor: pointer;
       display: flex;
@@ -50,6 +82,9 @@
       // background: #fff;
       border: 1px solid #e4e5e7;
       border-radius: 10px;
+      &:hover {
+        background-color: #f5f5f5;
+      }
       span {
         width: 20px;
         height: 20px;
@@ -65,6 +100,9 @@
       }
     }
     .login_email {
+      &:hover {
+        background-color: #f5f5f5;
+      }
       cursor: pointer;
       display: flex;
       padding: 10px 24px;
@@ -93,6 +131,7 @@
     }
     .strong {
       text-align: center;
+      // margin: 10px 0;
       strong {
         text-align: center;
         color: #b5b6ba;
@@ -103,6 +142,9 @@
       display: flex;
       gap: 5px;
       .login_apple {
+        &:hover {
+          background-color: #f5f5f5;
+        }
         cursor: pointer;
         display: flex;
         padding: 10px 24px;
@@ -130,6 +172,9 @@
         }
       }
       .login_facebook {
+        &:hover {
+          background-color: #f5f5f5;
+        }
         cursor: pointer;
         display: flex;
         padding: 10px 24px;
