--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,10 +1,10 @@
 .login_modal {
   height: 100%;
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   border-radius: 12px;
   .login_left {
+    width: 50%;
     border-radius: 12px 0 0 12px;
     background-image: url("../../../public/image/login-image.png");
     background-position: center;
@@ -27,6 +27,7 @@
     }
   }
   .login_right {
+    width: 50%;
     padding: 24px 40px 32px;
     .login_right_title {
       h2 {
@@ -225,5 +226,21 @@
   }
   .ant-modal-footer {
     display: none;
+  }
+}
+
+@media (max-width: 1160px) {
+  .login_modal {
+    .login_modal_list {
+      column-count: 3;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .login_modal {
+    .login_right {
+      width: 100%;
+    }
   }
 }
