xong search suggestions

--- a/src/components/BrandMessage/brand-message.scss
+++ b/src/components/BrandMessage/brand-message.scss
@@ -63,6 +63,9 @@
   .brand_message {
     .message_list {
       grid-template-columns: repeat(2, 1fr);
+      .message_item {
+        justify-content: center;
+      }
     }
     .brand_video {
       height: 600px;
